tests/miniJava/neg/005747_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } this class java { }
